...
                            <Select.Content
                              presentation="popover"
                              width={220}
                              className="border border-white/10 shadow-none"
                              style={{ backgroundColor: Neutral.z900 }}
                            >
                              <Select.ListLabel>Track as</Select.ListLabel>
                              <Select.Item
                                value={UNTRACKED}
                                label="Not tracked"
                              >
                                <Select.ItemLabel />
                                <Select.ItemIndicator />
...
